--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,12 @@
-DATABASE_URL="postgresql://your_db_user:your_db_password@localhost:5432/your_db_name"
-NODE_ENV=development 
+# Database Configuration
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=podcaster
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/podcaster
+
+# Server Configuration
+PORT=8000
+NODE_ENV=development
+
+# API Configuration
+ITUNES_API_URL=https://itunes.apple.com/search
