--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,22 +4,23 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        NODE_ENV: development
     ports:
       - "3000:3000"
     volumes:
       - ./frontend:/app
       - frontend_node_modules:/app/node_modules
+    env_file:
+      - ./frontend/.env
     environment:
-      - NEXT_PUBLIC_API_URL=http://localhost:8000
-    depends_on:
-      backend:
-        condition: service_healthy
+      NEXT_PUBLIC_API_URL: http://localhost:8000
     networks:
       - app_network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
-      interval: 30s
-      timeout: 10s
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000 || exit 0"]
+      interval: 10s
+      timeout: 5s
       retries: 3
     restart: unless-stopped
 
@@ -28,25 +29,27 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+      args:
+        NODE_ENV: development
     ports:
       - "8000:8000"
     volumes:
       - ./backend:/app
       - backend_node_modules:/app/node_modules
     env_file:
-      - .env
+      - ./backend/.env
     environment:
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      - NODE_ENV=development
+      # Override Database URL to use Docker service name
+      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-podcaster}
     depends_on:
       db:
         condition: service_healthy
     networks:
       - app_network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8000/health || exit 0"]
+      interval: 10s
+      timeout: 5s
       retries: 3
     restart: unless-stopped
 
@@ -56,11 +59,16 @@ services:
     ports:
       - "5432:5432"
     env_file:
-      - .env
+      - ./backend/.env
+    environment:
+      # Use values from .env with fallbacks
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-podcaster}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-podcaster}"]
       interval: 5s
       timeout: 5s
       retries: 5
